--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "rebass": "^3.0.0-12",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
